# firanka

./: .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  LICENSE.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
docs/: conf.py  domains.rst  index.rst
firanka/: __init__.py  builder.py  builders.py  domain.py  exceptions.py  intervals.py  ranges.py  series.py  timeproviders.py
firanka/series/: __init__.py  base.py  bundle.py  exceptions.py  function.py  interpolations.py  modulo.py  range.py  series.py
firanka/structure/: base.py  combined.py
tests/: test_builder.py  test_domain.py  test_intervals.py  test_range.py  test_series.py  test_timeproviders.py
tests/series/: series.py
tests/test_series/: __init__.py  common.py  series.py  test_bundles.py  test_range.py  test_series.py
