[metadata]
description-file = README.md
license = MIT License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
description = Calculations on real functions
url = https://github.com/smok-serwis/firanka

[pycodestyle]
max-line-length=100

[bdist_wheel]
universal=1
